[tool.poetry]
name = "tidier"
version = "0.1.0"
description = ""
authors = ["Radon Rosborough <radon.neon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.0"
PyGithub = "^2.1.1"
croniter = "^1.4.1"
python-dotenv = "^1.0.0"
gql = {extras = ["requests"], version = "^3.4.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
